--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a Workshop about Protractor",
   "main": "index.js",
   "scripts": {
-    "clean": "",
+    "clean": "rm -rf dist",
     "build": "npm run clean && tsc",
     "test": "npm run test:headless",
     "test:local": "npm run build && protractor dist/protractor/local.config.js",
