--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "clean": "rm -rf dist",
     "build": "npm run clean && tsc",
+    "test": "npm run test:headless",
     "test:local": "npm run build && protractor dist/protractor/local.config.js",
-    "test:headless": "npm run build && protractor dist/protractor/headless.config.js"
+    "test:headless": "npm run build && protractor dist/protractor/headless.config.js",
+    "postinstall": "webdriver-manager update --gecko false"
   },
   "repository": {
     "type": "git",
@@ -26,6 +28,7 @@
   },
   "homepage": "https://github.com/julianfelipe27/protractor-workshop-2018#readme",
   "dependencies": {
+    "jasmine-spec-reporter": "^5.0.1",
     "protractor": "^5.4.3"
   },
   "devDependencies": {
